--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         <div class="reglogin-contain">
             <div class="regloginbox">
                 <div class="reglog-title"><b>ACLC Alumni Log In</b></div>
+		<form action="config.php" method="POST">
                 <div class="reglog-cin-form">
                     <input type="text" name="login-usn" placeholder="USN">
                 </div>
@@ -17,6 +18,7 @@
                     <input type="password" name="login-pwd" placeholder="Password">
                 </div>                    
                 <div><input type="submit" name="login-submit" value="Log In"></div>
+		</form>
             </div>
         </div>  
     </div>
