--- a/login.html
+++ b/login.html
@@ -10,15 +10,15 @@
         <div class="reglogin-contain">
             <div class="regloginbox">
                 <div class="reglog-title"><b>ACLC Alumni Log In</b></div>
-		<form action="config.php" method="POST">
-                <div class="reglog-cin-form">
-                    <input type="text" name="login-usn" placeholder="USN">
-                </div>
-                <div class="reglog-cin-form">
-                    <input type="password" name="login-pwd" placeholder="Password">
-                </div>                    
-                <div><input type="submit" name="login-submit" value="Log In"></div>
-		</form>
+		        <form action="config.php" method="POST">
+                    <div class="reglog-cin-form">
+                        <input type="text" name="login-usn" placeholder="USN" required>
+                    </div>
+                    <div class="reglog-cin-form">
+                        <input type="password" name="login-pwd" placeholder="Password" required>
+                    </div>                    
+                    <input type="submit" name="login-submit" value="Log In">
+		        </form>
             </div>
         </div>  
     </div>
