win11mel: alum2.css is not responding so... yea

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACLC Alumni Log In</title>
-    <link rel="stylesheet" href="alum2.css">
+    <link rel="stylesheet" href="alum.css">
 </head>
 <body>
     <div class="std-contain">
@@ -19,6 +19,7 @@
                     </div>                    
                     <input type="submit" name="login-submit" value="Log In">
 		        </form>
+                <div class="">Don't have an account? <a href="register.html">Register</a></div>
             </div>
         </div>  
     </div>
