win11mel: modified css, login and register

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
     <div class="std-contain">
         <div class="reglogin-contain">
-            <div class="regloginbox">
+            <div class="loginbox">
                 <div class="reglog-title"><b>ACLC Alumni Log In</b></div>
 		        <form action="config.php" method="POST">
                     <div class="reglog-cin-form">
