--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 <body>
     <div class="std-contain">
         <div class="reglogin-contain">
-            <div class="regloginbox">
+            <div class="regbox">
                 <div class="reglog-title"><b>ACLC Alumni Registration</b></div>
             </div>
         </div>
