--- a/login.html
+++ b/login.html
@@ -9,14 +9,14 @@
     <div class="std-contain">
         <div class="reglogin-contain">
             <div class="loginbox">
-                <div class="reglog-title"><b>ACLC Alumni Log In</b></div>
+                <div class="log-title"><b>ACLC Alumni Log In</b></div>
 		        <form action="config.php" method="POST">
-                    <div class="reglog-cin-form">
-                        <input type="text" name="login-usn" placeholder="USN" required>
-                    </div>
-                    <div class="reglog-cin-form">
-                        <input type="password" name="login-pwd" placeholder="Password" required>
-                    </div>                    
+                    <!-- <div class="reglog-cin-form"> -->
+                    <input type="text" name="login-usn" placeholder="USN" required>
+                    <!-- </div> -->
+                    <!-- <div class="reglog-cin-form"> -->
+                    <input type="password" name="login-pwd" placeholder="Password" required>
+                    <!-- </div>                     -->
                     <input type="submit" name="login-submit" value="Log In">
 		        </form>
                 <div class="">Don't have an account? <a href="register.html">Register</a></div>
