win11mel: added query from register to database in php

--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                             <input type="text" name="reg-suffix">
                         </div>
                         <br>
-                        <input type="submit" value="Register">
+                        <input type="submit" name="reg-submit" value="Register">
                     </form>
                 <!-- </div> -->
                 
