--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
                             <input type="password" name="reg-conpass" required>
                         </div>
                         <br>
-                        <hr width="50%">
+                        <!-- <hr width="50%"> -->
                         <br>
                         <!-- <div class="reglog-cin-form">
                             <label for="reg-lname">Last Name, </label><label for="reg-fname">First Name, </label><label for="reg-mname">Middle Name, </label><label for="reg-suffix">Suffix:</label>
@@ -35,6 +35,7 @@
                         <div class="reglog-cin-form">
                             <input type="text" name="reg-lname" placeholder="Last Name"><input type="text" name="reg-lname" placeholder="Last Name">
                         </div> -->
+                        <div>Name:</div>
                         <div class="reglog-cin-form">
                             <label for="reg-lname">Last Name: </label>
                             <input type="text" name="reg-lname" required>
@@ -51,6 +52,8 @@
                             <label for="reg-suffix">Suffix: </label>
                             <input type="text" name="reg-suffix">
                         </div>
+                        <br>
+                        <br>
                         <div class="reglog-cin-form">
                             <label for="reg-gender">Gender: </label>
                             <input list="genders" type="text" name="reg-gender" required>
@@ -61,6 +64,13 @@
                             </datalist>
                         </div>
                         <div class="reglog-cin-form">
+                            <label for="reg-bday">Date Of Birth</label>
+                            <input type="date" name="reg-bday">
+                        </div>
+                        <br>
+                        <br>
+                        <div>Contact Information:</div>
+                        <div class="reglog-cin-form">
                             <label for="reg-no">Phone Number: </label>
                             <input type="number" name="reg-no">
                         </div>
@@ -68,6 +78,9 @@
                             <label for="reg-email">Email Address: </label>
                             <input type="email" name="reg-email">
                         </div>
+                        <br>
+                        <br>
+                        <div>Address:</div>
                         <div class="reglog-cin-form">
                             <label for="reg-subd">Village / Subdivision: </label>
                             <input type="text" name="reg-subd">
