THE DAMN alum.css WOULDNT WORK SO FUCK IT

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACLC Alumni Log In</title>
-    <link rel="stylesheet" href="alum2.css">
+    <link rel="stylesheet" href="reglogin.css">
 </head>
 <body>
     <div class="std-contain">
