--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACLC Alumni Registration</title>
-    <link rel="stylesheet" href="alum2.css">
+    <link rel="stylesheet" href="reglogin.css">
 </head>
 <body>
     <div class="std-contain">
