--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACLC Alumni Log In</title>
-    <link rel="stylesheet" href="reglogin.css">
+    <link rel="stylesheet" href="alum.css">
 </head>
 <body>
     <div class="std-contain">
@@ -19,7 +19,8 @@
                     <!-- </div>                     -->
                     <input type="submit" name="login-submit" value="Log In">
 		        </form>
-                <div class="">Don't have an account? <a href="register.html">Register</a></div>
+                <div class="linklogin">Don't have an account? <a href="register.html">Register</a></div>
+                <!-- <a href="index.php"><button>Back</button></a> -->
             </div>
         </div>  
     </div>
