--- a/register.html
+++ b/register.html
@@ -158,6 +158,10 @@
                             <input type="text" name="reg-campus" required>
                         </div>
                         <div class="reglog-cin-form">
+                            <label for="reg-usn">USN: </label>
+                            <input type="text" name="reg-usn" required>
+                        </div>
+                        <div class="reglog-cin-form">
                             <label for="reg-degree">Degree / Certificate:</label>
                             <input type="text" name="reg-campus" required>
                         </div>
