modified login & register html files, and index.css

--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
     
     </script>
 </head>
-<body id="body">
+<body id="body" style="background-color: whitesmoke;">
     <div class="index-topbar">
 		<div class="index-tb-logo"><img src="alum-images/aclclogo.png" alt="ACLC Logo"></div>
 		<a class="tb-a" id="tb-a-bars" href="#" onclick="popmenu()" onmouseover="barshover()"><div class="tb-icon"><i class="fas fa-bars" id="bars"  style="font-size:50px;color:white"></i></div></a>
@@ -85,7 +85,7 @@
 		<a href="#" ><div class="index-popmenu-opt">GALLERY</div></a>
 		<a href="#" ><div class="index-popmenu-opt">ABOUT</div></a>		
 	</div>
-    <div class="std-contain">
+    <div class="std-contain" style="background-color: whitesmoke;">
         <div class="reglogin-contain">
             <div class="loginbox">
                 <div class="log-title"><b>ACLC Alumni Log In</b></div>
