--- a/register.html
+++ b/register.html
@@ -94,9 +94,9 @@
                     <div class="linklogin">Already registered? <a href="login.html">Log In</a></div>
                 </div>
                 
-                <!-- <div class="regbox-txt-left"> 
+                <!-- <div class="regbox-txt-left"> -->
                     <form class="regform" action="config.php" method="POST">
-                        <div class="reg-form-title">
+                        <!--<div class="reg-form-title">
                             <b>Log In Information:</b>                                           
                         </div>
                         <div class="reglog-cin-form">
@@ -242,8 +242,12 @@
                         </div>
                         <div class="reglog-cin-form">
                             <label for="reg-degree">Degree / Certificate:</label>
-                            <input type="text" name="reg-campus" required>
+                            <input type="text" name="reg-degree" required>
                         </div>
+                        <!-- <div class="reglog-cin-form">
+                            <label for="reg-degree">Date (HIDDEN):</label>
+                            <input type="datetime-local" name="reg-campus" value="" required>
+                        </div> -->
 
                         <br>
                         <input type="submit" name="reg-submit" value="Register">
@@ -255,5 +259,24 @@
             </div>
         </div>
     </div>
+    <div class="index-agenft">
+		<div class="index-af-left-blk">
+			<div class="index-af-lb-img">
+				<img src="alum-images/aclcimg-tr.png" alt="ACLC COLLEGE">
+			</div>
+			<!-- <img src="alum-images/aclclogo.png" alt="ACLC Logo"> -->
+		</div>
+		<div class="index-af-mid-blk">
+			<div>Footer of the dying mel</div>
+			<div>Mel is the only one makin the damned system</div>
+			<div>For the sake of experience</div>
+		</div>
+		<div class="index-af-right-blk">
+			alr they on block
+			but not aligned on the left
+			<br>
+			(they are now)
+		</div>
+	</div>
 </body>
 </html>
