--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Log In</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/alumni/index.css">
 </head>
 <body style="background-color: whitesmoke;">
     <div class="std-contain" style="background-color: whitesmoke;">
         <div class="reglogin-contain">
             <div class="loginbox">
                 <div class="log-title"><b>ACLC Admin Log In</b></div>
-		        <form action="config.php" method="POST">
+		        <form action="/alumni/config.php" method="POST">
                     <!-- <div class="reglog-cin-form"> -->
                     <input type="text" name="admin-login-usn" placeholder="Username" required>
                     <!-- </div> -->
