--- a/login.html
+++ b/login.html
@@ -111,15 +111,10 @@
 			<!-- <img src="alum-images/aclclogo.png" alt="ACLC Logo"> -->
 		</div>
 		<div class="index-af-mid-blk">
-			<div>Footer of the dying mel</div>
-			<div>Mel is the only one makin the damned system</div>
-			<div>For the sake of experience</div>
+			<div>Footer</div>
 		</div>
 		<div class="index-af-right-blk">
-			alr they on block
-			but not aligned on the left
-			<br>
-			(they are now)
+			<div>Footer</div>
 		</div>
 	</div>
 </body>
