--- a/login.html
+++ b/login.html
@@ -92,7 +92,17 @@
         <div class="foot-width">
             <img class="foot-img" src="alum-images/aclcimg-tr.png" alt="ACLC COLLEGE">
         </div>
-        <div class="foot-width menu-txtalign-left user-txtcolor">Footer</div>
+        <div class="foot-width menu-txtalign-left user-txtcolor">
+            <div><b>MISSION</b></div>        
+            <p class="menu-txtalign-left">
+                To provide a holistic, relevant, quality and globally recognized IT-based education in all levels and disciplines with the objective of producing professionals and leaders responsive to the needs of Science and the international community cognizant of the welfare and benefits of its men and women thereby realizing their potential as productive members of the society for the honor and glory of God Almighty.
+            </p>
+            <br>
+            <div><b>VISION</b></div>
+            <p class="menu-txtalign-left">
+                To be the leader and dominant provider of relevant globally recognized information technology-based education and related services in the global market.
+            </p>
+        </div>
         <div class="foot-width menu-txtalign-left user-txtcolor">Footer</div>
     </div>
 </body>
